# rlox

./: Cargo.toml  readme.md
.VSCodeCounter/2023-08-07_01-16-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-07_03-42-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
enum_repr/src/: lib.rs
private/src/: meaningless.lox
src/: chunk.rs  common.rs  compiler.rs  debug.rs  gc.rs  lib.rs  main.rs  memory.rs  object.rs  scanner.rs  table.rs  utils.rs  value.rs  vm.rs
src/compiler/: parser.rs
src/compiler/parser/: compile_time_error_handlers.rs  emit_methods.rs  ops_after_get_parse_rule.rs  statement_methods.rs  variable_methods.rs
tests/: cmp_on_ref_ref_string.rs  project_root_usage.rs  type_puning_cast.rs  vm_hand_compile.rs
