[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_repr = { path = "./enum_repr" }
project-root = "0.2.2"
lazy_static = "1.4.0"
once_cell = "1.18.0"

[features]
default = ["debug_trace_execution", "debug_trace_stack"]
debug_trace_execution = []
debug_trace_stack = ["debug_trace_execution"]
